Add ROS publisher to sonar.cpp file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ find_package(catkin REQUIRED COMPONENTS
   tf
 )
 find_package(OpenCV REQUIRED)
+# find_package(wiringPI REQUIRED) #Needed for sonar 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} CMAKE_CURRENT_SOURCE_DIR)
 find_package (ZBar0)
 
@@ -110,7 +111,7 @@ catkin_package(
   INCLUDE_DIRS include
 #  LIBRARIES warehouse_interiit
  CATKIN_DEPENDS roscpp rospy std_msgs cv_bridge message_runtime
-#  DEPENDS system_lib
+#  DEPENDS wiringPI
 )
 
 ###########
@@ -127,10 +128,12 @@ include_directories(
 
 
 add_executable(strategy src/strategy.cpp)
-# add_executable(line_detector src/line_detect.cpp)
 add_executable(controller src/controller.cpp)
 add_executable(line_detector src/line.cpp)
-add_executable(barcode_node src/barcode.cpp)
+# add_executable(sonar src/sonar.cpp)
+#add_executable(barcode_node src/barcode.cpp)
+# add_executable(line_detector src/line_detect.cpp)
+
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -155,13 +158,17 @@ target_link_libraries(controller
    ${catkin_LIBRARIES}
 )
 
-target_link_libraries( line_detector
+target_link_libraries(line_detector
    ${catkin_LIBRARIES}
    ${OpenCV_LIBS}
 )
 
- target_link_libraries(barcode_node
-    zbar
-    ${catkin_LIBRARIES}
-    ${OpenCV_LIBS}
- )
+target_link_libraries(sonar
+   ${catkin_LIBRARIES}
+)
+
+#target_link_libraries(barcode_node
+#    zbar
+#    ${catkin_LIBRARIES}
+#    ${OpenCV_LIBS}
+# )
