--- a/package.xml
+++ b/package.xml
@@ -18,6 +18,7 @@
   <build_depend>image_geometry</build_depend>
   <build_depend>cv_bridge</build_depend>
   <build_depend>OpenCV</build_depend>
+  <build_depend>ardrone_autonomy</build_depend>
   <depend>image_transport</depend>
   <depend>zbar</depend>
   <build_depend>message_generation</build_depend>
